[gd_scene load_steps=3 format=3 uid="uid://csj3b5mdbkfi3"]

[ext_resource type="Script" path="res://scenes/settings/settings.gd" id="1_m56yy"]
[ext_resource type="PackedScene" uid="uid://co6uf4jhk5jkp" path="res://scenes/popups/menu_dialog/menu_dialog.tscn" id="2_alemw"]

[node name="Settings" type="CenterContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_m56yy")

[node name="MenuDialog" parent="." instance=ExtResource("2_alemw")]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MenuDialog/MarginContainer/MarginContainer2/ContentContainer" index="0"]
layout_mode = 2

[node name="CenterContainer" type="CenterContainer" parent="MenuDialog/MarginContainer/MarginContainer2/ContentContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MenuDialog/MarginContainer/MarginContainer2/ContentContainer/VBoxContainer/CenterContainer"]
layout_mode = 2

[node name="AnimationSpeed" type="Label" parent="MenuDialog/MarginContainer/MarginContainer2/ContentContainer/VBoxContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 5
text = "OPTION_ANIM_SPEED"

[node name="HBoxContainer" type="HBoxContainer" parent="MenuDialog/MarginContainer/MarginContainer2/ContentContainer/VBoxContainer/CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="Slow" type="Label" parent="MenuDialog/MarginContainer/MarginContainer2/ContentContainer/VBoxContainer/CenterContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 5
theme_type_variation = &"SubtleLabel"
text = "OPTION_SLOW"
vertical_alignment = 1

[node name="AnimationSpeedSlider" type="HSlider" parent="MenuDialog/MarginContainer/MarginContainer2/ContentContainer/VBoxContainer/CenterContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(400, 60)
layout_mode = 2
size_flags_vertical = 5
focus_mode = 0
min_value = 0.2
max_value = 2.0
step = 0.0
value = 2.0

[node name="Fast" type="Label" parent="MenuDialog/MarginContainer/MarginContainer2/ContentContainer/VBoxContainer/CenterContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 5
theme_type_variation = &"SubtleLabel"
text = "OPTION_FAST"
vertical_alignment = 1

[node name="Spacing2" type="Control" parent="MenuDialog/MarginContainer/MarginContainer2/ContentContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="ButtonbarCenterContainer" type="CenterContainer" parent="MenuDialog/MarginContainer/MarginContainer2/ContentContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MenuDialog/MarginContainer/MarginContainer2/ContentContainer/VBoxContainer/ButtonbarCenterContainer"]
layout_mode = 2

[node name="DefaultButton" type="Button" parent="MenuDialog/MarginContainer/MarginContainer2/ContentContainer/VBoxContainer/ButtonbarCenterContainer/HBoxContainer"]
layout_mode = 2
text = "SETTINGS_BUTTON_RESET_DEFAULTS"

[node name="CancelButton" type="Button" parent="MenuDialog/MarginContainer/MarginContainer2/ContentContainer/VBoxContainer/ButtonbarCenterContainer/HBoxContainer"]
layout_mode = 2
text = "SETTINGS_BUTTON_CANCEL"

[node name="ApplyButton" type="Button" parent="MenuDialog/MarginContainer/MarginContainer2/ContentContainer/VBoxContainer/ButtonbarCenterContainer/HBoxContainer"]
layout_mode = 2
text = "SETTINGS_BUTTON_APPLY"

[node name="Label" type="Label" parent="MenuDialog/TitleContainer" index="0"]
layout_mode = 2
text = "MENU_SETTINGS"

[connection signal="value_changed" from="MenuDialog/MarginContainer/MarginContainer2/ContentContainer/VBoxContainer/CenterContainer/VBoxContainer/HBoxContainer/AnimationSpeedSlider" to="." method="_on_animation_speed_value_changed"]
[connection signal="pressed" from="MenuDialog/MarginContainer/MarginContainer2/ContentContainer/VBoxContainer/ButtonbarCenterContainer/HBoxContainer/DefaultButton" to="." method="_on_default_button_pressed"]
[connection signal="pressed" from="MenuDialog/MarginContainer/MarginContainer2/ContentContainer/VBoxContainer/ButtonbarCenterContainer/HBoxContainer/CancelButton" to="." method="_on_cancel_button_pressed"]
[connection signal="pressed" from="MenuDialog/MarginContainer/MarginContainer2/ContentContainer/VBoxContainer/ButtonbarCenterContainer/HBoxContainer/ApplyButton" to="." method="_on_apply_button_pressed"]

[editable path="MenuDialog"]
